# hackyeah-project-2k24

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AudioFeatures.py  Dockerfile  README.md  head_move.py  mp4tomp3.py  num_peo_on_video.py  pyproject.toml
.github/workflows/: pull-request.yaml
src/hackyeah_project_lib/: config.py  gcp.py  main_pipeline.py  openai.py  openai2.py  prompts.py  transcription.py  transcription_srt.py  version.py
src/hackyeah_project_lib/audio_processing/: audio_converter.py  audio_features.py  num_people_on_video.py  transcription.py  transcription_srt.py
src/hackyeah_project_lib/audio_processing/xgboost_pause_detection/: __init__.py  scaler.pkl  xgboost_class.py  xgboost_model.pkl  xgboost_test.ipynb
src/hackyeah_project_lib/llm_processor/: models.py  processor.py  prompts.py  prompts.yaml
src/hackyeah_project_lib/models/: xgboost_class.py
src/hackyeah_project_lib/text_processing/: speech_metrics.py
src/hackyeah_project_lib/text_processing/llm_processor/: models.py  processor.py  prompts.py  prompts.yaml
src/hackyeah_project_lib/training_data/: transcriptions.py  transcriptions.yaml
src/hackyeah_project_lib/utils/: logger.py  s3.py  simple_speech_metrics.py
src/hackyeah_project_lib/video_processing/: count_people_on_video.py  gcp.py  head_move.py  models.py  mp4tomp3.py  prompts.py  reduce_mp4_size.py  schemas.py  video_to_audio.py
src/hackyeah_project_lib/web/: 1_Main_page.py  s3.py  ui.py
src/hackyeah_project_lib/web/pages/: 2_Compare_videos.py  multiple_videos.py
src/hackyeah_project_lib/web/utils/: gauge_widget.py
src/web/: ui.py
tests/: conftest.py  local.env  test_llm_processor.py  test_simple_speech_metrics.py
